# cosmic-clevetura

./: .gitignore  Cargo.toml  LICENSE  justfile
resources/: 99-clevetura.rules  applet-settings.json  io.github.reality2_roycdavies.cosmic-clevetura.desktop
src/: applet.rs  ble.rs  config.rs  hid.rs  keyboard.rs  lib.rs  main.rs  profiles.rs  proto.rs  settings.rs  settings_cli.rs  settings_page.rs  slider_actions.rs
